<resources>
    <string name="app_name">PIVPN</string>
    <string name="admob_app_ID">ca-app-pub-4045317680265045~8373510276</string>

    <string name="vpn_process_name" translatable="false">:my.custom.vpn.process.name</string>
    <string name="vpn_provider_authorities" translatable="false">com.anchorfree.hydrasdk.app.demo</string>

    <string name="log_in">LOGIN</string>
    <string name="log_out">LOGOUT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="optimal_server">OPTIMAL SERVER</string>
    <string name="unknown">UNKNOWN</string>

    <string name="devices_exceed">Available device count is exceed. Please consider upgrading your subscription.</string>
    <string name="sessions_exceed">Available active session count is exceed. Please consider upgrading your subscription.</string>

    <string name="version">V : \u0020</string>
    <string name="app_error">Application error</string>
    <string name="no_data">No data</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_type">Account Type</string>
    <string name="activated_devices">Activated Devices</string>
    <string name="account">Account</string>
    <string name="signin_error">Unable to Sign in</string>
    <string name="no_network">Unable to connect to server. Check your Internet connection.</string>
    <string name="online_devices">Online Devices</string>
    <string name="please_wait">Please Wait…</string>
    <string name="vpn_server_location">VPN Server Location</string>
    <string name="vpn_node">VPN Node</string>
    <string name="legal_information">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>

    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="host_url_title">Host Url: </string>
    <string name="carrier_id_title">Carrier ID: </string>
    <string name="confirm">CONFIRM</string>

    <string name="traffic_stats">UL: %1$s, DL: %2$s </string>
    <string name="traffic_limit">%1$s of %2$s available</string>
    <string name="traffic_unlimited">UNLIMITED</string>

    <string name="current_server">CURRENT_SERVER</string>
    <string name="connecting">Connecting</string>
    <string name="paused">Paused</string>
    <string name="current_ip">Current IP</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="noads">NO Ads</string>
    <string name="increasespeed">Increase Connection Speed</string>
    <string name="protect">Protect your security</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>

    <string name="network_error">Network error…</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="it_seems_you_are_not_connected_with_internet">It seems you are not connected with Internet</string>
    <string name="no_internet">Sorry! Not connected to internet</string>
    <string name="install">INSTALL</string>
    <string name="select_country">Select Country</string>
    <string name="default_server_ip_text">00.000.000.00</string>
    <string name="unlimited_available">UNLIMITED Available</string>
    <string name="best_performance_server">Best Performance Server</string>
    <string name="zero">0</string>
    <string name="start_your_3_day_free">Start your 3 day free</string>
    <string name="go_pro_to_unlock_all_features">Go Pro to unlock all features</string>
    <string name="_0_mb_of_0_mb_available">0 Mb of 0 Mb available</string>
    <string name="all_feature">All Feature</string>
    <string name="_1_month">1 Month</string>
    <string name="_6_month">6 Months</string>
    <string name="_12_month">12 Months</string>
    <string name="select_country_server">Select Country server</string>
    <string name="basic_info">Basic Info</string>
    <string name="change_password">Change Password</string>
    <string name="other_info">Other Info</string>
    <string name="rate_us">Rate us</string>
    <string name="terms_to_use">Terms to Use</string>
    <string name="share_app_link">Share App Link</string>
    <string name="more_apps">More Apps</string>
    <string name="default_region">DEFAULT REGION</string>
    <string name="new_york_ny">New York, NY</string>
    <string name="be_safe">BE SAFE</string>
    <string name="you_can_browse_the_internet_in_the_most_secure_possible_way_with_full_data_encryption_we_let_you_anonymously_browse_the_internet_and_protect_your_private_information">You can browse the internet in the most secure possible way. With full data encryption, We let you anonymously browse the internet and protect your private information.</string>
    <string name="online_freedom">ONLINE FREEDOM</string>
    <string name="bypass_censorship_and_get_unlimited_access_to_all_of_your_favourite_websites_and_apps_without_any_fear_of_being_monitored_by_someone">Bypass censorship and get unlimited access to all of your favourite websites and apps without any fear of being monitored by someone.</string>
    <string name="privacy_and_security">PRIVACY and SECURITY</string>
    <string name="using_free_wi_fi_and_open_connections_puts_your_information_at_risk_we_ll_keep_your_sensitive_information_away_from_hackers_and_isps">Using free WI-fi and open connections puts your information at risk. We\'ll keep your sensitive information away from hackers and ISPs.</string>

    <string name="subscription_period_monthly">Monthly</string>
    <string name="subscription_period_sixmonth">Six Month</string>
    <string name="subscription_period_yearly">Yearly</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="premium">Premium</string>
    <string name="_0_b">0 B</string>
    <string name="location">Location :</string>
    <string name="update_ip">Update IP</string>
    <string name="scanning">Scanning</string>
    <string name="Open_setting">Open Settings</string>
</resources>
