<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_forbidden" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:paddingLeft="3dp"
                android:text="@string/noads"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:paddingLeft="3dp"
                android:text="@string/increasespeed"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_shield" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:paddingLeft="3dp"
                android:text="@string/protect"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_month_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_select_server_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_bold"
                android:text="@string/_1_month"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:text="@string/all_feature"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/one_month_sub_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/averta_bold"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/six_months_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_select_server_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_bold"
                android:text="@string/_6_month"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:text="@string/all_feature"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/six_months_sub_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/averta_bold"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twelve_months_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_select_server_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_bold"
                android:text="@string/_12_month"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averta_light"
                android:text="@string/all_feature"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/one_year_sub_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/averta_bold"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>
