<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/basic_info"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:fontFamily="@font/averta_light"/>

        <LinearLayout
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_personal_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/personal_information"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_change_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="23dp"
            android:background="@color/light_gray"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/other_info"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:fontFamily="@font/averta_light"/>

        <LinearLayout
            android:id="@+id/rate_us"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_rate_us" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/rate_us"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_privacy_policy" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/terms_to_use"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_terms_to_use" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/terms_to_use"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/share_app_link"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/share_app_link"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/more_app"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_playstore" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/more_apps"
                android:textColor="@android:color/white"
                android:fontFamily="@font/averta_light"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/light_gray" />
    </LinearLayout>
</LinearLayout>